<resources>
    <string name="app_name">VisibilityGone</string>
    <string name="digit">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="mc">MC</string>
    <string name="m">M+</string>
    <string name="_m">M-</string>
    <string name="mr">MR</string>
    <string name="mult">*</string>
    <string name="c">C</string>
    <string name="sqrt">SQRT</string>
    <string name="_1_x">1/x</string>
    <string name="_sign">+/-</string>
    <string name="minus">-</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="_plus">+</string>
    <string name="_br_l">(</string>
    <string name="_br_r">)</string>
    <string name="e">e</string>
    <string name="n">n!</string>
    <string name="_divide">/</string>
    <string name="_eq">=</string>
    <string name="normal">Обычный калькулятор</string>
    <string name="engineer">Инженерный калькулятор</string>
</resources>
