<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:text="@string/digit"
        android:gravity="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_mc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/mc"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_m_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/m"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_m_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_m"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_mr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/mr"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_7"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_8"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_9"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/mult"
            android:padding="0dp"
            android:textSize="15sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_c"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/c"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_sqrt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/sqrt"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_1x"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_1_x"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_sign"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_4"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_5"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:padding="0dp"
            android:textSize="15sp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_cos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/cos"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_sin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/sin"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_tan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/tan"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_log"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/log"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_1"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_2"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_3"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/_plus"
            android:padding="0dp"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_bracket_l"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_br_l"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_bracket_r"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_br_r"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_e"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/e"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_n"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/n"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_0"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/dot"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/_divide"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_equally"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/_eq"
            android:padding="0dp"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_normal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/normal"
            android:padding="0dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_engineer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/engineer"
            android:padding="0dp"
            android:textSize="15sp"/>







    </LinearLayout>

</LinearLayout>